# jlq

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  PRD.md  README.md  vcpkg-configuration.json  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: commit-message-instructions.md  copilot-instructions.md
.github/instructions/: bash.instructions.md  cmake.instructions.md  cpp.instructions.md  python.instructions.md
.github/prompts/: detect-agent-drift.prompt.md
.github/workflows/: ci.yml
apps/jlq/: CMakeLists.txt
apps/jlq/src/: main.cpp
docs/: PRD.md  benchmarking.md  phase2.md  phase3.md
libs/jlq/: CMakeLists.txt
libs/jlq/include/jlq/: cli.hpp  mapped_file.hpp  path.hpp  query.hpp  query_config.hpp
libs/jlq/src/: LineScanner.cpp  LineScanner.hpp  MappedFile.cpp  MappedFile.hpp  Query.cpp  Query.hpp  QueryConfig.hpp  cli.cpp  exit_codes.hpp  line_scanner.cpp  mapped_file.cpp  path.cpp  path.hpp  query.cpp
scripts/: bench.py  bootstrap_vcpkg.sh  build.sh  ci.sh  clean.sh  compare_bench.sh  gen_jsonl.py  package.sh  python_venv.sh  test.sh
test/: CMakeLists.txt  conftest.py  integration_tests.py
test/apps/: CMakeLists.txt
test/apps/cli_tests/: CMakeLists.txt  cli_tests.cpp  unit_tests.cpp
test/apps/mapped_file_tests/: CMakeLists.txt
test/cli_tests/: CMakeLists.txt  main.cpp
test/libs/: CMakeLists.txt
test/libs/test_utils/: CMakeLists.txt
test/libs/test_utils/include/: test_harness.hpp
test/mapped_file_tests/: CMakeLists.txt  mapped_file_tests.cpp
tests/: CMakeLists.txt  cli_tests.cpp  mapped_file_tests.cpp  temp_file.hpp
vcpkg-triplets/: arm64-linux-gnu.cmake  toolchain-gnu.cmake
